--- a/package.json
+++ b/package.json
@@ -1,4 +1,3 @@
-```json
 {
   "name": "coppola-artistica",
   "version": "1.0.0",
@@ -11,11 +10,11 @@
   },
   "dependencies": {
     "@react-google-maps/api": "2.18.1",
-    "next": "13.5.4",
+    "autoprefixer": "10.4.14",
+    "next": "^15.3.1",
+    "postcss": "^8.5.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "tailwindcss": "3.3.2",
-    "autoprefixer": "10.4.14",
-    "postcss": "8.4.23"
+    "tailwindcss": "3.3.2"
   }
 }
